--- a/neuralArchitects/index.html
+++ b/neuralArchitects/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>neuralarchitects</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="description" content="NeuralArchitects - Pioneering Game Development, Computer Vision AI, and Embedded Systems in Johannesburg, South Africa" />
+    <title>NeuralArchitects | Game Dev & AI Solutions</title>
   </head>
   <body>
     <div id="root"></div>
