--- a/neuralArchitects/index.html
+++ b/neuralArchitects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="theme-color" content="#60a5fa" />
     <meta name="description" content="Neural Architects - Pioneering Game Development, Computer Vision AI, and Embedded Systems in Johannesburg, South Africa" />
     <title>Neural Architects | Game Dev & AI Solutions</title>
   </head>
